--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -292,6 +292,46 @@ After user enters the above command, Typee will store the information and append
 The arguments to this command can be entered sequentially, leveraging the interaction offered by Typee. +
 Example: `add` `t/meeting` `s/11/11/2019/1500` ... `p/High`
 
+The table below summarizes the parameters of the add command.
+
+[%header, cols=3*]
+|===
+|Parameter
+|Prefix
+|Constraints
+
+|Engagement type
+|`t/`
+|Engagements must be one of 'meeting', 'appointment' or 'interview'.
+
+|Start Date-Time
+|`s/`
+|This is when the engagement to be added begins. +
+The start date-time must be entered in the `dd/MM/yyyy/HHmm` format.
+
+|End Date-Time
+|`e/`
+|This is when the engagement to be added ends. +
+The end date-time must be entered in the `dd/MM/yyyy/HHmm` format and occur *after* the start time.
+
+|Location
+|`l/`
+|The location of the engagement. The location must be non-empty.
+
+|Description
+|`d/`
+|A brief description of what the engagement is about. The description must be non-empty.
+
+|Attendees
+|`a/`
+|The list of people who will be present at the engagement. Individuals must be separated by +
+a vertical line - '|'.
+
+|Priority
+|`p/`
+|Priority level of the engagement. The priority level can be one of 'Low', 'Medium', 'High' or 'None'.
+|===
+
 
 .Engagement successfully saved in system storage.
 image::add_2.png[width="800"]
